# ARGO

./: .gitignore  ARGO_AGENT_v3_Technical_Specification.md  ARGO_AGENT_v3_Texnik_Zadacha.md  ARGO_Executive_Summary.md  ARGO_Hermes_Parity_Matrix.md  ARGO_TZ_Executive_Summary.md  ARGO_TZ_Hermes_Parity_Matrix.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
argo-brain/: .gitignore  Dockerfile  README.md  pyproject.toml
argo-brain/argo_brain/: __init__.py  __main__.py  config.py
argo-brain/argo_brain/api/: __init__.py  dashboard.py  openapi.py  server.py
argo-brain/argo_brain/cache/: __init__.py  session.py
argo-brain/argo_brain/channels/: __init__.py  _ws.py  base.py  dingtalk.py  discord.py  email_channel.py  feishu.py  google_chat.py  irc.py  line.py  matrix.py  mattermost.py  rocketchat.py  runner.py  sms_twilio.py  teams.py  telegram.py  viber.py  webhook.py  wecom.py  whatsapp.py
argo-brain/argo_brain/checkpoint/: __init__.py  manager.py
argo-brain/argo_brain/compliance/: __init__.py  base.py  cn_pipl.py  gdpr.py  ru_152.py  uz_152.py
argo-brain/argo_brain/context/: __init__.py  loader.py
argo-brain/argo_brain/core/: __init__.py  agent.py
argo-brain/argo_brain/cron/: __init__.py  scheduler.py
argo-brain/argo_brain/handoff/: __init__.py  transfer.py
argo-brain/argo_brain/hub/: __init__.py  __main__.py  cli.py  client.py  package.py  registry.py  (+3 more)
argo-brain/tests/: test_agent.py  test_agent_integration.py  test_auth.py  test_browser.py  test_builtin_plugins.py  test_cache.py  test_channels.py  test_checkpoint.py  test_cn_channels.py  test_compliance.py  test_context.py  test_cron.py  test_curator.py  test_dashboard.py  test_data.py  test_delegate.py  test_devops.py  test_devops_extra.py  test_discord.py  test_e2e.py  test_email.py  test_format.py  test_graph.py  test_hub.py  test_hub_server.py  test_i18n.py  test_irc.py  test_kanban.py  test_language.py  test_matrix.py  test_mcp.py  test_mcp_server.py  test_media.py  test_memory.py  test_messaging_channels.py  test_observability.py  test_office_channels.py  test_openapi.py  test_perf.py  test_plugin.py  (+23 more)
argo-cli/: Cargo.toml  README.md
argo-cli/src/: lib.rs  main.rs
argo-core/: Cargo.toml  Dockerfile
argo-core/src/: config.rs  ipc.rs  main.rs  memory.rs  security.rs  state.rs
(+335 files in other folders)
